proof using new cost function Csy

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1125,8 +1125,10 @@
 \newcommand{\FG}    [0]{{\ft{G}}}
 \newcommand{\FH}    [0]{{\ft{H}}}
 \newcommand{\FW}    [0]{{\ft{W}}}
-\newcommand{\FR}    [0]{{\ft{R}}}
 \newcommand{\FQ}    [0]{{\ft{Q}}}
+\newcommand{\FR}    [0]{{\ft{R}}}
+\newcommand{\FS}    [0]{{\ft{S}}}
+\newcommand{\FY}    [0]{{\ft{Y}}}
 
 \newcommand{\sym}   [0]{\mathup{\lambda}}
 \newcommand{\symf}  [0]{\ft{\lambda}}
@@ -1136,30 +1138,6 @@
 
 \renewcommand{\sin}{\mathfnct{sin}}%
 \renewcommand{\cos}{\mathfnct{cos}}%
-%20181116_deprecated%%--------------------------------------
-%20181116_deprecated%% sequences
-%20181116_deprecated%%--------------------------------------
-%20181116_deprecated%\newcommand{\seqSix}[7][x_n]{%
-%20181116_deprecated%  \setlength{\arrayrulewidth}{1pt}%
-%20181116_deprecated%  \begin{array}{|l|*{8}{c|}}
-%20181116_deprecated%    \arrayrulecolor{blue}%
-%20181116_deprecated%    \hline%
-%20181116_deprecated%    \cellcolor{blue}\color{white}\mathbf#1%
-%20181116_deprecated%      & \msizes\cdots & #2 & #3 & #4 & #5 & #6 & #7 & \msizes\cdots\\
-%20181116_deprecated%    \arrayrulecolor{white}\cline{1-1}\arrayrulecolor{blue}\cline{2-9}%
-%20181116_deprecated%      %\rowcolor[gray]{0.75}\cellcolor{blue}\color{white}%
-%20181116_deprecated%      \cellcolor{blue}\color{white}\msizes n%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} \cdots%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} -2%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} -1%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} 0%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} 1%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} 2%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} 3%
-%20181116_deprecated%      & \msizes\cellcolor[gray]{0.75} \cdots%
-%20181116_deprecated%    \\\hline%
-%20181116_deprecated%  \end{array}%
-%20181116_deprecated%  }
 
 %--------------------------------------
 % free variables
@@ -1677,6 +1655,7 @@
 \newcommand{\Swuq}   {\Sw{uq}}
 \newcommand{\Swvv}   {\Sw{vv}}
 \newcommand{\Swyy}   {\Sw{yy}}
+\newcommand{\Swss}   {\Sw{ss}}
 \newcommand{\Swxy}   {\Sw{xy}}
 \newcommand{\Swsx}   {\Sw{sx}}
 \newcommand{\Swsy}   {\Sw{sy}}
