cross-correlation properties for cnoise and mnoise systems

--- a/common/math/graphics/system/opT_cnoise.tex
+++ b/common/math/graphics/system/opT_cnoise.tex
@@ -3,6 +3,11 @@
 % XeLaTeX file
 % nominal unit = 10mm
 % see pst-node package: https://ctan.org/pkg/pst-node
+%          U      _____      V
+%          |     |     |     |
+%   X --->(+)--->|  T  |--->(+)---> Y
+%             P  |_____| Q
+%
 %============================================================================
 \begin{pspicture}(-3.25,-0.55)(3.25,1.25)
   %-------------------------------------
@@ -16,7 +21,7 @@
   %-------------------------------------
   % operator box
   %-------------------------------------
-  \fnodeput{0}{ 0}{ 0}{sysH}{$\opT$}%
+  \fnodeput{0}{ 0}{ 0}{T}{$\opT$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
@@ -26,8 +31,8 @@
   % ADDERS: circles with $+$ inside
   %          (left side)                   (right side)
   %--------------------------------------------------------------------------
-  \cnodeput{0}(-1.5,0){addL}{$+$}%
-  \cnodeput{0}(+1.5,0){addR}{$+$}%
+  \cnodeput{0}(-1.5,0){addU}{$+$}%
+  \cnodeput{0}(+1.5,0){addV}{$+$}%
     % |     |   |   |  |  |   |____ $+$ in circle
     % |     |   |   |  |  |________ L=left / R=right
     % |     |   |   |  |___________ node label
@@ -38,30 +43,30 @@
   %-------------------------------------
   % label locations
   %-------------------------------------
-  \pnode(-2.50,0.00){sysX}%         signal input  label location
-  \pnode(+2.50,0.00){sysY}%         signal output label location
-  \pnode(-1.50,0.75){sysU}%         noise  input  label location
-  \pnode(+1.50,0.75){sysV}%         noise  output label location
-  \pnode(-0.85,0.00){sysXh}%        signal input  near h(n) label location
-  \pnode(+0.85,0.00){sysYh}%        signal output near h(n) label location
+  \pnode(-2.50,0.00){X}%         signal input  label location
+  \pnode(+2.50,0.00){Y}%         signal output label location
+  \pnode(-1.50,0.75){U}%         noise  input  label location
+  \pnode(+1.50,0.75){V}%         noise  output label location
+  \pnode(-0.85,0.00){P}%        signal input  near h(n) label location
+  \pnode(+0.85,0.00){Q}%        signal output near h(n) label location
   %-------------------------------------
   % label text
   %-------------------------------------
-  \uput[180](sysX) {$\rvx(n)$}% signal input  label
-  \uput[  0](sysY) {$\rvy(n)$}% signal output label
-  \uput[ 90](sysU) {$\rvu(n)$}% input  noise  label
-  \uput[ 90](sysV) {$\rvv(n)$}% output noise  label
-  \uput[-90](sysXh){$\rvp(n)$}% p = x + u
-  \uput[-90](sysYh){$\rvq(n)$}% y = q + v
+  \uput[180](X){$\rvx(n)$}% signal input  label
+  \uput[  0](Y){$\rvy(n)$}% signal output label
+  \uput[ 90](U){$\rvu(n)$}% input  noise  label
+  \uput[ 90](V){$\rvv(n)$}% output noise  label
+  \uput[-90](P){$\rvp(n)$}% p = x + u
+  \uput[-90](Q){$\rvq(n)$}% y = q + v
   %-------------------------------------
   % system connections
   %-------------------------------------
-  \ncline{->}{sysX}{addL}%
-  \ncline{->}{addL}{sysH}%
-  \ncline{->}{sysH}{addR}%
-  \ncline{->}{addR}{sysY}%
-  \ncline{->}{sysU}{addL}%
-  \ncline{->}{sysV}{addR}%
+  \ncline{->}{X}{addU}%
+  \ncline{->}{addU}{T}%
+  \ncline{->}{T}{addV}%
+  \ncline{->}{addV}{Y}%
+  \ncline{->}{U}{addU}%
+  \ncline{->}{V}{addV}%
   %-------------------------------------
   % development support--comment out before final version
   %-------------------------------------
