--- a/common/noise.tex
+++ b/common/noise.tex
@@ -6,9 +6,36 @@
 \chapter{Estimating Noise}
 %============================================================================
 
+
+\begin{figure}
+  \centering
+  \begin{tabular}{|c|c|}
+    \hline
+     \tbox{\includegraphics{graphics/opH_cnoise.pdf}}
+    &\tbox{\includegraphics{graphics/opH_mnoise.pdf}}
+    \\
+      (A) \opd{communications LTI additive noise model}
+     &(B) \opd{measurement    LTI additive noise model}
+    \\\hline
+  \end{tabular}
+  \caption{Additive noise systems with \propb{LTI} operator $\opH$\label{fig:addnoise}}
+\end{figure}
+
+Estimating noise in a system is difficult and many estimation methods are possible.
+
+
+%Here is one offered by Zheng, Hu, and Li in 2002\footnote{\citePpc{zheng2002}{919}{(25), (26)}}:
+%\\\indentx$\begin{array}{rcl}
+%  \Swww(\omega) &\eqa&  \Swxx(\omega) - \frac{\Swyx(\omega)}
+%\end{array}$
+
+
 \begin{liste}
   %\item \citeP{shoo1988}
   \item \citeP{thong2001}
+  \item \citeP{zheng2002}
   \item \citeP{kim2003}
   \item \citeP{kamel2004}
 \end{liste}
+
+
