cnoise mnoise cross-correlation proofs

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1654,7 +1654,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:addnoise_LTI} (B).
     && \text{and \prefp{thm:sysT_addnoise_v}}
   \\&= \frac{\Swqq(\omega) + \Swvv(\omega)}{\Swpq(\omega)}
     && \text{by hypothesis (C)}
-    && \text{and \prefp{thm:sysT_addnoise_w}}
+    && \text{and \prefp{lem:opT_addnoise_w}}
   \\&= \frac{\Swqq(\omega) + \Swvv(\omega)}{\Swqq(\omega)/\FH(\omega)}
     && \text{by \prope{LTI} hypothesis (A)}
     && \text{and \prefp{cor:Swxy}}
