added wicks-vold 1986 citation for Hs estimation

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -583,6 +583,7 @@ $\estHs\to\estHa$ as $s\to\infty$  \xref{thm:Hs_lim}.
   \citerpgc{shin2008}{293}{0470725648}{(9.67) with $\kappa(\omega)=s^2$},         %
   \citePpc{white2006}{679}{(6) with $\kappa(\omega)=s^2$},                        %
   \citePc{leclere2012}{(10) $\kappa(f)=1/s^2$ and $x$ and $y$ swapped},           %
+  \citePpc{wicks1986}{898}{has additional $s$ in denominator},
   \citePpc{zheng2002}{918}{(10), seems to differ}                                 %
   }                                                                               %
 \label{def:Hs}                                                                    %
@@ -1240,7 +1241,7 @@ as demonstrated in the next theorem.
 \begin{theorem}[Optimal LTI least-squares estimate $\estH$ of $\opH$]
 \label{thm:estHls}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (A) or (B).
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
 Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
 \thmbox{
   \brb{\begin{array}{FMMD}
